--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Vincent Tian!</h1>
-				<p>I'm a current MBAn student at MIT studying statistics, optimisation and machine learning! Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi, welcome to my website. I'm Vincent!</h1>
+				<p>I'm currently a MBAn student at MIT studying statistics, optimisation and machine learning! <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
