--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Vincent Tian</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi, welcome to my website. I'm Vincent!</h1>
-				<p>I'm currently a MBAn student at MIT studying statistics, optimisation and machine learning! <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:vinnyt@mit.edu">email</a></li>
-        		<li><a href="https://github.com/vtian72">github.com/vtian72</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Vincent Tian
+---
+<div class="blurb">
+	<h1>Hi, I'm Vincent. Welcome to my website!</h1>
+	<p>I'm currently a MBAn student at MIT studying statistics, optimisation and machine learning! <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
